--- a/traefik/values.yaml
+++ b/traefik/values.yaml
@@ -728,9 +728,9 @@ global:
 
 # -- Additional arguments to be passed at Traefik's binary
 # See [CLI Reference](https://docs.traefik.io/reference/static-configuration/cli/)
-# Use curly braces to pass values: `helm install --set="additionalArguments={--providers.kubernetesingress.ingressclass=traefik-internal,--log.level=DEBUG}"`
+# Use curly braces to pass values: `helm install --set="additionalArguments={--providers.kubernetesIngress.ingressClass=traefik-internal,--log.level=DEBUG}"`
 additionalArguments: []
-#  - "--providers.kubernetesingress.ingressclass=traefik-internal"
+#  - "--providers.kubernetesIngress.ingressClass=traefik-internal"
 #  - "--log.level=DEBUG"
 
 # -- Additional Environment variables to be passed to Traefik's binary
